--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -59,8 +59,11 @@
 .loadingView {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
     height: 92vh;
 }
 
@@ -162,7 +165,7 @@
     margin-bottom: -10px;
 }
 
-.modal-header {
+.modal-header { 
     flex-basis: 100%;
     cursor: pointer;
     opacity: 1;
