--- a/src/styles/Stake.css
+++ b/src/styles/Stake.css
@@ -24,12 +24,18 @@
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
+.full {
+    flex-basis: 90%;
+    text-align: center;
+}
+
 .stake-top {
     width: 100%;
     height: 5vh;
     display: flex;
     font-size: 12px;
     align-items: center;
+    font-family: 'Articulat.CF-V3-Heavy';
 }
 
 .stake-bottom {
@@ -42,6 +48,14 @@
     row-gap: 10px;
     overflow: auto;
     height: 35vh;
+}
+
+.col {
+    flex-direction: column;
+}
+
+.stake-bottom > h2 {
+    font-family: 'Articulat.CF-V3-Heavy';
 }
 
 .stake-header {
@@ -117,6 +131,10 @@
 .stake-image-item {
     width: 100px;
     border-radius: 3px;
+}
+
+.small {
+    font-size: 12px;
 }
 
 .image-holder:hover {
@@ -196,6 +214,20 @@
         text-align: left;
         width: 80%;
         margin-bottom: -10px;
+    }
+
+    .desc-viewer {
+        flex-basis: 100%;
+    }
+
+    .stake-viewer {
+        flex-basis: 100%;
+        height: 100%;
+    }
+
+    .stake-box {
+        flex-basis: 90%;
+        margin-bottom: 20px;
     }
     
   }
