Cleans up UI a bit

--- a/src/styles/Stake.css
+++ b/src/styles/Stake.css
@@ -82,6 +82,11 @@
 .desc-top {
     text-align: center;
 }
+
+.loadingView > h1 {
+    font-size: 60px;
+    font-family: 'Articulat.CF-V3-Heavy';
+}
 .desc-top > h1 {
     font-size: 60px;
     font-family: 'Articulat.CF-V3-Heavy';
