--- a/src/styles/Marketplace.css
+++ b/src/styles/Marketplace.css
@@ -1,4 +1,113 @@
 .marketplace {
+    padding-top: 20px;
     width: 100%;
     height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.left-market {
+    height: 90vh;
+    width: 20%;
+    text-align: center;
+    font-family: 'Articulat.CF-V3-Heavy';
+    font-size: 35px;
+}
+
+.right-market {
+    height: 90vh;
+    width: 70%;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+    row-gap: 20px;
+}
+
+.market-item {
+    width: 220px;
+    height: 300px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgba(9, 24, 51, 0.95);
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+
+
+    text-align: center;
+}
+
+.button-submit {
+    border-radius: 3px;
+    border: none;
+    padding: 5px;
+    font-family: 'Articulat.CF-V3-Bold';
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 7px;
+
+    opacity: 1;
+    transition: opacity 500ms;
+    transition-timing-function: ease-out;
+}
+
+.button-submit:hover {
+    opacity: .5;
+    transition: opacity 500ms;
+    transition-timing-function: ease-in;
+}
+
+.item-img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.item-body {
+    height: 100%;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.description {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.expiration {
+    font-size: 14px;
+    color: darkred;
+}
+
+.category-filter {
+    width: 350px;
+    font-family: 'Articulat.CF-V3-Heavy';
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.category-filter div {
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    width: 250px;
+    text-align: center;
+    height: 25px;
+    border-radius: 10px;
 }
