--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ a {
 }
 
 .header {
-  height: 60px;
   width: 93vw;
   display: flex;
   align-items: center;
@@ -27,10 +26,10 @@ a {
 
 @media only screen and (max-width: 1080px) {
   .header {
+      width: 85vw;
       flex-direction: column;
       justify-content: center;
       align-items: left;
-      height: 400px;
       row-gap: 20px;
       margin-right: 0;
       margin-left: 0;
@@ -43,8 +42,9 @@ a {
   }
 
   .header-right {
-    margin: auto;
-    justify-content: center;
+    margin: 0;
+    width: 85vw;
+    flex-wrap: wrap;
   }
 
   body {
@@ -75,6 +75,43 @@ a {
   opacity: 0.5;
   transition: opacity 500ms;
   transition-timing-function: ease-in;
+}
+
+.header-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  column-gap: 10px;
+}
+
+.header-icon {
+  width: 30px;
+  height: 30px;
+  height: auto;
+
+  float: none;
+  clear: both;
+
+  border: 1px solid #f0f1f3;
+  border-radius: 50%;
+  padding: 8px;
+
+  opacity: 1;
+  transition: opacity 500ms;
+  transition-timing-function: ease-out;
+}
+
+.header-icon:hover {
+
+  opacity: .5;
+  transition: opacity 500ms;
+  transition-timing-function: ease-in;
+}
+
+.header-right > a {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .button {
@@ -144,41 +181,4 @@ a {
   background-color: rgba(0, 0, 0, 0.75);
   height: 93.5%;
   z-index: 5;
-}
-
-.header-right {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: auto;
-  column-gap: 10px;
-}
-
-.header-icon {
-  width: 30px;
-  height: 30px;
-  height: auto;
-
-  float: none;
-  clear: both;
-
-  border: 1px solid #f0f1f3;
-  border-radius: 50%;
-  padding: 8px;
-
-  opacity: 1;
-  transition: opacity 500ms;
-  transition-timing-function: ease-out;
-}
-
-.header-icon:hover {
-
-  opacity: .5;
-  transition: opacity 500ms;
-  transition-timing-function: ease-in;
-}
-
-.header-right > a {
-  margin-left: 8px;
-  margin-right: 8px;
 }
