--- a/src/styles/Marketplace.css
+++ b/src/styles/Marketplace.css
@@ -30,8 +30,8 @@
 }
 
 .market-item {
-    width: 220px;
-    height: 350px;
+    width: 250px;
+    height: 400px;
 
     display: flex;
     flex-direction: column;
@@ -67,9 +67,9 @@
 }
 
 .item-img {
-    object-fit: contain;
+    object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 200px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     margin-bottom: 5px;
