--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   background-position: bottom;
   background-image: url('./image/BAECAFE-background.jpg');
   color: #f0f1f3;
+  background-color: rgb(60, 60, 60);
 
   overflow: hidden;
 }
