--- a/src/styles/Marketplace.css
+++ b/src/styles/Marketplace.css
@@ -8,25 +8,87 @@
     flex-wrap: wrap;
 }
 
+.modal-main-listing {
+    height: 95%;
+    text-align: center;
+    width: 70%;
+}
+
+.modal-main-listing > h1 {
+    font-family: 'Articulat.CF-V3-Heavy';
+    font-size: 40px;
+    color: #3e8af6;
+}
+.list-wl {
+    height: 60%;
+    list-style: none;
+    margin-top: 30px;
+    overflow: auto;
+}
+
 .left-market {
     height: 90vh;
-    width: 20%;
+    width: 15%;
     text-align: center;
     font-family: 'Articulat.CF-V3-Heavy';
     font-size: 35px;
 }
 
+.left-market > h1 {
+    font-size: 35px;
+    text-align: center;
+    width: 100%;
+    color: #3e8af6;
+}
+.info-commission {
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
 .right-market {
-    height: 90vh;
-    width: 70%;
-    padding-left: 20px;
-    padding-right: 20px;
+    height: 85vh;
+    width: 80%;
+    padding: 20px;
+    border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     column-gap: 30px;
-    row-gap: 20px;
+    row-gap: 10px;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.10);
+}
+
+.desc-mark {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.desc-mark > p {
+    flex-basis: 100%;
+}
+
+.desc-mark > button {
+    border: 2px solid #f0f1f3;
+    background-color: rgba(255, 255, 255, 0.15);
+    height: 50px;
+    color: #f0f1f3;
+    font-size: 20px;
+    transition: background-color 200ms ease-out;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    flex-basis: 50%;
+}
+
+.desc-mark > button:hover{
+    opacity: 0.75;
+    transition: opacity 200ms;
+    transition-timing-function: ease-in;
+    cursor: pointer;
 }
 
 .market-item {
@@ -38,7 +100,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: rgba(9, 24, 51, 0.95);
+    background-color: rgba(30, 33, 33,0.95);
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
@@ -67,15 +129,23 @@
 }
 
 .item-img {
-    object-fit: cover;
-    width: 100%;
-    height: 200px;
+    width: 250px;
+    flex-basis: 50%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     margin-bottom: 5px;
 }
 
+.button-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+}
+
 .item-body {
+    flex-basis: 50%;
     height: 100%;
     width: 100%;
     padding-left: 10px;
@@ -89,11 +159,12 @@
 
 .expiration {
     font-size: 14px;
+    margin-bottom: 10px;
     color: darkred;
 }
 
 .category-filter {
-    width: 350px;
+    width: 100%;
     font-family: 'Articulat.CF-V3-Heavy';
     font-size: 20px;
     display: flex;
@@ -102,12 +173,43 @@
     margin-bottom: 20px;
 }
 
-.category-filter div {
-    border: 2px solid black;
+.category-filter-item {
+    border: 2px solid rgba(0,0,0,0.9);
+    margin: 2px;
     color: black;
     background-color: white;
     width: 250px;
     text-align: center;
     height: 25px;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+.filter-disabled {
+    border: 2px solid rgba(0,0,0,0.9);
+    margin: 2px;
+    color: black;
+    background-color: rgb(133, 133, 133);
+    width: 250px;
+    text-align: center;
+    height: 25px;
+    border-radius: 10px;
+    cursor: not-allowed;
+}
+
+.category-filter-item:hover {
+    opacity: .5;
+    transition: opacity 500ms;
+    transition-timing-function: ease-in;
+}
+
+@media only screen and (max-width: 1080px) {
+    .left-market {
+        width: 90%;
+    }
+
+    .right-market {
+        width: 90%;
+        justify-content: center;
+    }
 }
