--- a/src/styles/Marketplace.css
+++ b/src/styles/Marketplace.css
@@ -46,17 +46,16 @@
 }
 
 .right-market {
-    height: 85vh;
-    width: 80%;
+    overflow: auto;
+    padding:0;
+    height: 82vh;
+    width:70%;
+    justify-content: space-between;
     padding: 20px;
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
     align-items: flex-start;
-    column-gap: 30px;
-    row-gap: 10px;
-    overflow: auto;
 }
 
 .desc-mark {
@@ -202,13 +201,66 @@
     transition-timing-function: ease-in;
 }
 
-@media only screen and (max-width: 1080px) {
-    .left-market {
-        width: 90%;
-    }
+/* MARKETPLACE PAGE (THANKS JAMES)*/
+.marketplace{
+	height: initial;
+    max-width: 1600px;
+    margin: 30px auto;
+    align-items: initial;
+}
+.left-market{
+    width:20%;
+    padding:0 30px 0 0;
+}
+.category-filter .category-filter-item,
+.category-filter .filter-disabled{
+    width: 100%;
+    max-width: 250px;
+}
+.market-item {
+    min-height: 570px;
+    min-width: 240px;
+    width: 20%;
+    margin-bottom: 30px;
+}
+.market-item .item-img{
+	width: 100%;
+	min-height: 220px;
+}
+.market-item .item-body{
+	padding:10px 10px 20px;
+	flex-basis: initial;
+} 
+.market-item p.description{
+    min-height: 160px;
+    padding:15px;
+    word-break: break-word;
+}
 
-    .right-market {
-        width: 90%;
-        justify-content: center;
-    }
+@media(max-width: 1500px){
+	.market-item {
+	    min-width: 200px;
+	    width: 30%;
+	}
+	.right-market{ width: 60%; padding: 0 5%; }
+
+}
+@media(max-width: 1100px){
+	.left-market{ width: 30%;}
+	.right-market{ width: 50%; padding: 0 5%; }
+	.market-item {
+	    min-width: 200px;
+	    width: 45%;
+	}
+}
+@media(max-width: 860px){
+	.left-market{ width: 90%; padding: 10px 5% 40px;height: auto;}
+	.right-market{ width: 90%; padding: 0 5%; }
+
+}
+@media(max-width: 480px){
+	.market-item {
+	    min-width: 200px;
+	    width: 100%;
+	}
 }
