--- a/src/styles/Mint.css
+++ b/src/styles/Mint.css
@@ -5,7 +5,7 @@
     align-items:center;
     justify-content: center;
     text-align: center;
-    height: 93vh;
+    min-height: 99vh;
     row-gap: 25px;
 }
 
