--- a/src/index.css
+++ b/src/index.css
@@ -30,16 +30,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  background-image: url('https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/BAECAFE-mintBG.jpg');
-  /* background-image: url('./image/BAECAFE-background.jpg'); */
+  /* background-image: url('https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/BAECAFE-background.jpg'); */
+  background-image: url('./image/BAECAFE-background.jpg');
   color: #f0f1f3;
   background-color: rgb(60, 60, 60);
 }
 
 @media only screen and (max-width: 1500px) {
   body {
-    background-image: url('https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/BAECAFE-mintBG.jpg');
-    /* background-image: url('./image/BAECAFE-mobilebackground.jpg'); */
+    background-image: url('./image/BAECAFE-mobilebackground.jpg');
     overflow: auto;
   }
 }
