--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+body::-webkit-scrollbar {
+    width: 18px;
+    background-color: #1d2122;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #3a3a3a;
+   border-radius: 20px;
+   border: 4px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #444;
+}
+
+
 .page {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   z-index: 1;
@@ -11,120 +28,79 @@ a {
 }
 
 .header {
-  width:94%;
-	padding:15px 3%;
+  background: #1d2122;
+  position: fixed;
+  width: 87%;
+  padding: 20px 3% 20px 10%;
 	margin:0 auto;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   column-gap: 30px;
-  padding: 5px 20px;
   font-size: 18px;
   z-index: 2;
+  /*position: fixed;*/
 }
+    a.logo,
+    .headerIcon {
+      width: 60px;
+      height: 60px;
+    }
+    .header-item {
+      cursor: pointer;
+      opacity: 1;
+      transition: opacity 500ms;
+      transition-timing-function: ease-out;
+    }
+    .header-item:hover {
+      cursor: pointer;
+      opacity: 0.5;
+      transition: opacity 500ms;
+      transition-timing-function: ease-in;
+    }
+  
 
-@media only screen and (max-width: 1080px) {
-  .header {
-      width: 85vw;
-      flex-direction: column;
-      justify-content: center;
-      align-items: left;
-      row-gap: 20px;
-      margin-right: 0;
-      margin-left: 0;
-  }
-
-  .headerIcon {
-    width: 35px;
-    height: 35px;
-    align-self: flex-start;
-  }
-
+  /*header social icons*/
   .header-right {
-    margin: 0;
-    width: 85vw;
-    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    column-gap: 10px;
   }
-
-  body {
-    overflow: scroll;
-  }
-}
-
-.logo {
-  width: 50px;
-}
-
-.headerIcon {
-  width: 60px;
-  height: 60px;
-}
-
-.header-item {
-  cursor: pointer;
-
-  opacity: 1;
-  transition: opacity 500ms;
-  transition-timing-function: ease-out;
-}
-
-.header-item:hover {
-  cursor: pointer;
-
-  opacity: 0.5;
-  transition: opacity 500ms;
-  transition-timing-function: ease-in;
-}
-
-.header-right {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: auto;
-  column-gap: 10px;
-}
-
-.header-right>a{
-  border: 1px solid #f0f1f3;
-  border-radius: 50%;
-  display: flex;
-justify-content: center;
-align-items: center;
-  height: 50px;
-  width: 50px;
-}
-
-.header-icon {
-  width: 30px;
-  height: 30px;
-  height: auto;
-
-  float: none;
-  clear: both;
-
-  border: 1px solid #f0f1f3;
-  border-radius: 50%;
-  padding: 8px;
-
-  opacity: 1;
-  transition: opacity 500ms;
-  transition-timing-function: ease-out;
-}
-
-img.header-icon{
-  border:none;
-  border-radius:0;
-  width:30px;
-    padding: 0;
-}
-
-
-.header-icon:hover {
-
-  opacity: .5;
-  transition: opacity 500ms;
-  transition-timing-function: ease-in;
-}
+    .header-right a{
+      border: 1px solid #f0f1f3;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+      width: 50px;
+    }
+    .header-icon {
+      width: 30px;
+      height: 30px;
+      height: auto;
+      float: none;
+      clear: both;
+      border: 1px solid #f0f1f3;
+      border-radius: 50%;
+      padding: 8px;
+      opacity: 1;
+      transition: opacity 500ms;
+      transition-timing-function: ease-out;
+    }
+    .header-icon:hover {
+      opacity: .5;
+      transition: opacity 500ms;
+      transition-timing-function: ease-in;
+    }
+    img.header-icon{
+      border:none;
+      border-radius:0;
+      width:30px;
+      padding: 0;
+    }
 
 @media (max-width:1250px){
 	.header{
@@ -141,12 +117,7 @@ img.header-icon{
 		}
 }
 
-@media(max-width:1080px){
-	    .header-right {
-	        max-width: 400px;
-	        margin:0 auto;
-	    } 
-}
+
 
 .button {
   border: none;
@@ -165,7 +136,6 @@ img.header-icon{
   transition: opacity 500ms;
   transition-timing-function: ease-out;
 }
-
 .button-connect {
   border-radius: 3px;
   border: none;
@@ -173,28 +143,24 @@ img.header-icon{
   font-family: 'Articulat.CF-V3-Bold';
   cursor: pointer;
   margin-right: 10px;
-
   background-color: #3e8af6;
   color:#f0f1f3;
   border: 1px solid #f0f1f3;
-
   opacity: 1;
   transition: opacity 500ms;
   transition-timing-function: ease-out;
 }
-
 .button-connect:hover {
   opacity: .5;
   transition: opacity 500ms;
   transition-timing-function: ease-in;
 }
-
-
 .button:hover {
   opacity: .5;
   transition: opacity 500ms;
   transition-timing-function: ease-in;
 }
+
 
 .main {
   display: flex;
@@ -202,7 +168,6 @@ img.header-icon{
   justify-content: center;
   flex-direction: column;
 }
-
 .coming-soon {
   position: absolute;
   display: flex;
@@ -215,4 +180,103 @@ img.header-icon{
   background-color: rgba(0, 0, 0, 0.75);
   height: 93.5%;
   z-index: 5;
+}
+
+
+
+/*MENU + HAMBURGER*/
+a.logo{
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 9;
+}
+#menu__btn{
+  display: none;
+}
+#menu__toggle{
+    opacity: 0;
+    position: absolute;
+  }
+
+/*MOBILE MENU*/
+@media(max-width:1080px){
+
+  .header{
+    width: 90%;
+    padding: 40px 5% 30px;
+  }
+  .header p{
+    text-align: center;
+    padding: 30px 0;
+  }
+
+  .header-right {
+    margin: 0 auto;
+    max-width: 400px;
+    padding: 10px 10px;
+  }
+
+
+
+  #menu__btn {
+    display: block;
+    opacity: 0;
+  }
+
+  #menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    top: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 40px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    z-index: 9;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #f0f1f3;
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -10px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 10px;
+  }
+
+  .menu__box {
+    display: block;
+    position: fixed;
+    top: -100%;
+    margin: 0;
+    transition-duration: .25s;
+  }
+   .menu__box .header-item{
+    text-align: center;
+    padding: 20px;
+    display: block;
+   }
+  
 }
