--- a/src/styles/Marketplace.css
+++ b/src/styles/Marketplace.css
@@ -1,7 +1,7 @@
 .marketplace {
-    padding-top: 20px;
+    padding: 120px 0 0;
     width: 100%;
-    height: 90vh;
+    height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,7 +48,7 @@
 .right-market {
     overflow: auto;
     padding:0;
-    height: 82vh;
+    height: 70vh;
     width:70%;
     justify-content: space-between;
     padding: 20px;
@@ -205,7 +205,7 @@
 .marketplace{
 	height: initial;
     max-width: 1600px;
-    margin: 30px auto;
+    margin: 0px auto;
     align-items: initial;
 }
 .left-market{
