--- a/src/styles/Stake.css
+++ b/src/styles/Stake.css
@@ -1,3 +1,11 @@
+.stake {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 60px 0 0;
+
+}
+
 .stake-viewer {
     display: flex;
     flex-wrap: wrap;
@@ -191,11 +199,7 @@
     z-index: 2;
 }
 
-.stake {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
+
 
 @media only screen and (max-width: 1080px) {
 
