--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -104,118 +104,7 @@
         cursor: pointer;
     }
 
-/*MODAL*/
-.modal {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: max(50vw, 350px);
-    height: max(50vh, 600px);
-    background-color: rgba(30, 33, 33,0.95);
-    z-index: 2;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 30px;
-}
-
-    .modal-left {
-        width: 50%;
-        height: 100%;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .modal-right {
-        height: 100%;
-        width: 40%;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .modal-right > p {
-        text-align: left;
-        width: 80%;
-        margin-bottom: -10px;
-    }
-
-    .modal-right > h1 {
-        text-align: left;
-        width: 80%;
-        margin-bottom: 20px;
-        font-family: 'Articulat.CF-V3-Heavy';
-        font-size: 50px;
-    }
-
-    .modal-right-header {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        align-items: center;
-        width: 77%;
-    }
-
-    .modal-right-header > p {
-        text-align: left;
-        width: 80%;
-        margin-bottom: -10px;
-    }
-
-    .modal-header { 
-        flex-basis: 100%;
-        cursor: pointer;
-        opacity: 1;
-        transition: opacity 200ms;
-        transition-timing-function: ease-out;
-    }
-
-    .modal-header:hover {
-        opacity: 0.5;
-        transition: opacity 200ms;
-        transition-timing-function: ease-in;
-    }
-
-
-    .attribute {
-        width: 80%;
-        display: flex;
-        text-align: left;
-        flex-wrap: wrap;
-    }
-
-    .attribute-left {
-        flex-basis: 40%;
-        padding: 0.5%;
-    }
-
-    .attribute-right {
-        flex-basis: 58%;
-        background-color: rgba(255, 255, 255, 0.2);
-        padding: 0.5%;
-    }
-
-    .modal-image-item {
-        height: 25vw;
-        border-radius: 5px;
-    }
-
-    .modal-bg {
-        background-color: rgba(0,0,0,0.4);
-        position:absolute;
-        top:0px;
-        right:0px;
-        bottom:0px;
-        left:0px;
-        z-index: 2;
-    }
 
 /*FILTER MENU BUTTON HIDDEN WHEN NOT MOBILE*/
 #filter-menu__btn{
@@ -322,8 +211,6 @@
     height: 45vh;
   }
 
-
-
     .mobile-title{
         display: block;
         width: 70%;
@@ -343,70 +230,7 @@
         margin:10px 1%;
         float: left;
     }
-    .image-holder img{width: 100%}
-
-
-
-    /*.image-viewer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        column-gap: 20px;
-        row-gap: 40px;
-        height: 83vh;
-        overflow: auto;
-        z-index: 1;
-        flex-basis: 100%;
-        margin-top: 0px;
-        scroll-behavior: smooth;
-    }
-    .filter-viewer {
-        flex-basis: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items:center;
-        height: 60vh;
-        margin-top: 3vh;
-        margin-bottom: 5vh;
-    }
-    .modal {
-        top: 100%;
-        height: 800px;
-    }
-
-    .filter-viewer > h1{
-        font-size: 40px;
-    }
-
-    .modal-image-item {
-        height: 16em;
-        border-radius: 5px;
-    }
-
-    .modal-left {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-    }
-
-    .modal-right {
-        width: 100%;
-    
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .modal-right > h1 {
-        text-align: center;
-        width: 100%;
-        margin-bottom: 40px;
-        font-family: 'Articulat.CF-V3-Heavy';
-        font-size: 30px;
-    }*/
-    
-    
+    .image-holder img{width: 100%} 
   }
 @media (max-width: 725px) {
     .mobile-title{
@@ -453,5 +277,228 @@
     .image-viewer{
         width: 75%;
         margin: 0 5% 0 20%;
+    }
+}
+
+/******MODAL******/
+.modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 75%;
+    background-color: rgba(30, 33, 33,0.95);
+    z-index: 2;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+span.close-modal,
+span.close-modal::after {
+    display: block;
+    position: absolute;
+    top:40px;
+    right: 3%;
+    width: 20px;
+    height: 3px;
+    background-color: #f0f1f3;
+    transition-duration: .25s;
+    transform: rotate(45deg);
+  }
+span.close-modal::after {
+    content: '';
+    top: 0px;
+    transform: rotate(90deg);
+}
+
+    .modal-left {
+        width: 50%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .modal-right {
+        height: auto;
+        width: 40%;
+        min-width: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+.nft-os-link{
+    border: 1px solid #f0f1f3;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    top: 95px;
+    right: 3%;
+}
+.nft-os-link img{
+      width:20px;
+      height: auto;
+}
+    .modal-right > p {
+        text-align: left;
+        width: 80%;
+        margin-bottom: -10px;
+    }
+
+    .modal-right > h1 {
+        text-align: left;
+        width: 80%;
+        margin-bottom: 20px;
+        font-family: 'Articulat.CF-V3-Heavy';
+        font-size: 50px;
+    }
+
+    .modal-right-header {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+        width: 79%;
+    }
+
+    .modal-right-header > p {
+        text-align: left;
+        width: 80%;
+        margin-bottom: -10px;
+    }
+
+    .modal-header { 
+        flex-basis: auto;
+        cursor: pointer;
+        opacity: 1;
+        transition: opacity 200ms;
+        transition-timing-function: ease-out;
+    }
+
+    .modal-header:hover {
+        opacity: 0.5;
+        transition: opacity 200ms;
+        transition-timing-function: ease-in;
+    }
+
+
+    .gallery-page .attribute {
+        width: 80%;
+        display: flex;
+        text-align: left;
+        flex-wrap: wrap;
+        text-transform: capitalize;
+    }
+
+    .gallery-page .attribute-left {
+        flex-basis: 40%;
+        padding: 0.5%;
+    }
+
+    .gallery-page .attribute-right {
+        flex-basis: 55%;
+        background-color: rgba(255, 255, 255, 0.2);
+        padding: 5px 2%;
+        border-radius: 5px;
+    }
+
+    .modal-image-item {
+        height: 25vw;
+        border-radius: 5px;
+    }
+
+    .modal-bg {
+        background-color: rgba(0,0,0,0.4);
+        position:fixed;
+        top:0px;
+        right:0px;
+        bottom:0px;
+        left:0px;
+        z-index: 2;
+    }
+
+@media only screen and (max-width: 1500px) {
+    .modal {
+        width: 70%;
+    }
+    .modal-image-item{
+        height: initial!important;
+        width: 90%;
+    }
+}
+@media only screen and (max-width: 1300px) {
+    .modal {width: 80%;}
+    .modal-left {
+        width: 45%;
+    }
+    .modal-right {
+        width: 45%;
+        min-width: 450px;
+    }
+}
+@media only screen and (max-width: 1080px) {
+    .gallery-page .modal {
+
+    }
+    .gallery-page .modal-left {
+        width: 40%;
+    }
+    .gallery-page .modal-right {
+        width: 60%;
+        min-width: 400px;
+    }
+    .gallery-page .modal-image-item{
+        height: initial!important;
+        width: 90%;
+    }
+    .gallery-page .modal h1{
+        font-size: 30px;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .gallery-page .attribute{
+        font-size: 14px;
+    }
+    .gallery-page .modal-right {
+        min-width: initial;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .gallery-page .modal {
+        width: 90%;
+        height: calc(100% - 60px);
+        padding: 30px 5%;
+        display: block;
+        overflow-y:scroll;
+    }
+    .gallery-page .modal-left {width: 80%;margin:40px auto;}
+    .gallery-page .modal-left img {max-width: 300px}
+    .gallery-page .modal-right { width: 100%;margin:0px auto;}
+    .nft-os-link{
+        border: 1px solid #f0f1f3;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40px;
+        width: 40px;
+        position: absolute;
+        top: 95px;
+        right: 1.5%;
+    }
+    .nft-os-link img{
+          width:20px;
+          height: auto;
     }
 }
