--- a/src/styles/Stake.css
+++ b/src/styles/Stake.css
@@ -191,12 +191,12 @@
 
 .modal-bg {
     background-color: rgba(0,0,0,0.4);
-    position:absolute;
+    position:fixed;
     top:0px;
     right:0px;
     bottom:0px;
     left:0px;
-    z-index: 2;
+    z-index: 11;
 }
 
 
