--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -226,6 +226,7 @@
         width: 70%;
         margin: 0 15% 0;
         display: block;
+        padding-bottom: 100px;
     }
     .image-holder{
         width: 23%;
