--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -404,6 +404,11 @@ span.close-modal::after {
       width:20px;
       height: auto;
 }
+    .nft-os-link:hover img{
+        opacity: .5;
+        transition: opacity 500ms;
+        transition-timing-function: ease-in;
+    }
     .modal-right > p {
         text-align: left;
         width: 80%;
