--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -82,7 +82,7 @@
     .banner-text{ width: 50%; padding: 100px 2% 100px 2%;}
 }
 @media(max-width: 1079px){
-    .left {padding: 150px 20px 50;}
+    .left {padding: 150px 20px 50px;}
     .left .banner-text h1 { font-size: 72px; text-align: center;}
     .left .right{display: none;}
     .banner-text{ width: 96%; padding: 60px 2% 0px 2%;}
